[package]
name = "si_trace_print"
version = "0.1.0"
edition = "2021"
description = "A rust library to trace print messages indented to stack depth and function name."
repository = "https://github.com/jtmoon79/si_trace_print"
authors = ["James Thomas Moon"]
license = "MIT"
keywords = ["trace", "debug", "print"]
readme = "README.md"
rust-version = "1.62"
# Do not set metadata fields `documentation` or `homepage` unless using
# non-standard websites.
# See <https://rust-lang.github.io/api-guidelines/documentation.html#cargotoml-includes-all-common-metadata-c-metadata>

[dependencies]
backtrace = "0.3.66"
const_format = "0.2.26"
lazy_static = "1.4.0"
mut_static = "5.0.0"

[lib]
name = "si_trace_print"
path = "src/lib.rs"
crate-type = ["lib"]
edition = "2021"
test = true
doc = true
doctest = true
