[package]
name = "si_trace_print"
version = "0.1.3"
edition = "2021"
description = "A rust library to print trace messages indented to stack depth, optionally preceded by function name."
repository = "https://github.com/jtmoon79/si_trace_print"
authors = ["James Thomas Moon"]
license = "MIT"
keywords = ["trace", "debug", "print"]
readme = "README.md"
# Do not set metadata fields `documentation` or `homepage` unless using
# non-standard websites.
# See <https://rust-lang.github.io/api-guidelines/documentation.html#cargotoml-includes-all-common-metadata-c-metadata>
exclude = [
    "tools/*",
    "configs/*",
    ".github/*",
    ".codedov.yml",
    "rustfmt.toml",
]

[dependencies]
backtrace = "0.3.66"
const_format = "0.2.26"
lazy_static = "1.4.0"
mut_static = "5.0.0"

[lib]
name = "si_trace_print"
path = "src/lib.rs"
crate-type = ["lib"]
edition = "2021"
test = true
doc = true
doctest = true
