[package]
name = "si_trace_print"
version = "0.3.10"
edition = "2018"
description = "stack indented trace printing; a rust library to print messages indented to stack depth optionally preceded by the function name."
repository = "https://github.com/jtmoon79/si_trace_print"
authors = ["James Thomas Moon"]
license = "MIT"
keywords = ["trace", "debug", "print"]
categories = ["development-tools::debugging"]
readme = "README.md"
# this value must agree with the minimum at `.github/workflows/rust.yml`
rust-version = "1.56.0"
# Do not set metadata fields `documentation` or `homepage` unless using
# non-standard websites.
# See <https://rust-lang.github.io/api-guidelines/documentation.html#cargotoml-includes-all-common-metadata-c-metadata>
exclude = [
    "tools/*",
    "configs/*",
    ".github/*",
    ".codedov.yml",
    "rustfmt.toml",
]

[dependencies]
backtrace = "0.3.68"
const_format = "0.2.31"
lazy_static = "1.4.0"
mut_static = "5.0.0"

[lib]
name = "si_trace_print"
path = "src/lib.rs"
crate-type = ["lib"]
edition = "2018"
test = true
doc = true
doctest = true
# XXX: Do not set `proc-macro = true`, it will cause failure to run grcov
#          cargo test: error: the linked panic runtime `panic_unwind` is not compiled with this crate's panic strategy `abort`
